works online but last parts: after entering app when before if user clicks edit btn, dialog cannot display predifined data, second time no problem. after bookmark/edit/add - success, request send to get list and resubmit to update listAdapter.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,9 @@
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_splashScreen_to_baseScreen"
-            app:destination="@id/baseScreen" />
+            app:destination="@id/baseScreen"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/signUpScreen"
