--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- EditText -->
     <style name="EditText">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">330dp</item>
         <item name="android:layout_height">54dp</item>
         <item name="android:layout_marginRight">24dp</item>
         <item name="android:textColor">#FFF</item>
