--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="light2_blue">#a8dadc</color>
     <color name="light">#f1faee</color>
     <color name="red">#e63946</color>
+    <color name="green">#00FF0A</color>
 </resources>
