--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -14,22 +14,26 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:textColor="@color/dark_blue"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:maxLines="1"
+            app:layout_constraintEnd_toStartOf="@+id/ivDelete"
             app:layout_constraintStart_toEndOf="@+id/ivLike"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Title" />
 
         <TextView
             android:id="@+id/tvAuthor"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:maxLines="1"
             android:textStyle="italic"
+            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
             app:layout_constraintStart_toStartOf="@id/tvTitle"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             tools:text="author" />
@@ -59,7 +63,7 @@
             android:layout_height="50dp"
             android:layout_margin="16dp"
             android:padding="8dp"
-            android:src="@drawable/ic_baseline_bookmark_border_24"
+            tools:src="@drawable/ic_baseline_bookmark_border_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
